# athlete_ai_analysis

./: .cycling-ai.yaml  .env.example  .gitignore  .mcp.json  ARCHITECTURAL_IMPROVEMENT_PHASE_ORDER.md  CHANGELOG.md  CLI_QUESTION_FLOW.md  CROSS_TRAINING_CACHE_SUMMARY.md  EXAMPLE_WORKOUT_COMPARISON_OUTPUT.md  EXECUTION_FLOW.md  GEMINI_FIX_SUMMARY.md  MULTI_INSTANCE.md  Makefile  NEXT_SESSION_GEMINI.md  PHASE1_COMPLETION.md  PHASE2_KEY_ANSWERS.md  PHASE2_README.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_KEY_QUESTIONS_ANSWERED.md  PHASE3_SUMMARY.md  PHASE3_TOOL_SPECIFICATIONS.md  README.md  TRAINING_PLAN_LLM_MIGRATION.md  Thing to do.md  WEB_TO_PYTHON_API_INTEGRATION.md  WORKOUT_LIBRARY_SCHEMA_DIFFERENCES.md  WORKOUT_SELECTION_LOGIC_ANALYSIS.md  amplify.yml  claude.md  compare_fit_workouts.py  complete_training_plan.py  comprehensive_report.md  docker-compose.yml  insights-by-Riduck.txt  inspect_fit_file.py  package.json  personal_documentation.md  planned_30s_x_4m.json  product-feature-workflow.md  (+7 more)
.claude/: TOOL_REGISTRATION_DEBUG.md  TOOL_REGISTRATION_RESOLVED.md
.claude/agents/: python-expert-reviewer.md  task-executor-tdd.md  task-implementation-reviewer.md  task-prep-architect.md
.claude/commands/: task_management.md
.claude/current_task/: ALGORITHM_DESIGN.md  ANALYSIS.md  ARCHITECTURE_PLAN.md  EXECUTIVE_SUMMARY.md  EXECUTOR_QUICK_START.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PREPARATION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LOGGING_ADDED.md  MULTI_AGENT_PHASE1_PLAN.md  MULTI_AGENT_REFACTOR_PLAN.md  MULTI_AGENT_REFACTOR_README.md  PHASE1_READY_FOR_EXECUTION.md  PHASE2_CLI_INTEGRATION_PLAN.md  PHASE2_README.md  PHASE3_PLAN.md  PHASE3_README.md  (+15 more)
.history/: .mcp_20251029103953.json
backend/: main.py  requirements.txt
data/: MASTER_LIBRARY_COMPLETE.md  WORKOUT_LIBRARY_SCHEMA.md  WORKOUT_VALIDATION_SUMMARY.md  workout_id_mapping.json  workout_library.json  workout_library_legacy.json  workout_library_viewer.html  workout_validation_report.txt
docker/: python-test.Dockerfile  web-e2e.Dockerfile  web-test.Dockerfile
docs/: AI_COACH_ANALYSIS.md  ARCHITECTURE_DIAGRAM.md  AWS_BEDROCK_INTEGRATION_PLAN.md  AWS_BEDROCK_SETUP_GUIDE.md  AWS_BEDROCK_USER_GUIDE.md  CIRCULAR_IMPORT_SOLUTION.md  CONSOLE_DISPLAY_FIX.md  DATA_FORMAT_SUMMARY.md  DATA_PREP_TOOL_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOUBLE_NESTING_REMOVAL.md  EXECUTION_FLOW.md  EXTERNAL_PROMPTS.md  FILE_SPLITTING_GUIDE.md  FIT_WORKOUT_FILE_FORMAT.md  FIXES_SUMMARY.md  HTML_VIEWER_GUIDE.md  IMPLEMENTATION_PLAN.md  INTEGRATED_WORKFLOW.md  INTEGRATION_SUMMARY.md  INVESTIGATION_REPORT.md  KNOWLEDGE_BASE_TODO.md  LEGACY_CLEANUP_SUMMARY.md  LLM_INTERACTION_LOGGING.md  LOGGING_ENHANCEMENTS.md  MODAL_COMPARISON.md  PHASE3_DEBUG_SESSION.md  PHASE3_LOOP_ANALYSIS.md  PHASE3_VALIDATION_FIX.md  PHASE5_FIX_SUMMARY.md  PHASE5_REMOVAL.md  PLAN_GENERATION_FLOW.md  POST_MERGE_IMPROVEMENTS.md  PROFILE_ONBOARDING_ARCHITECTURE.md  PR_REVIEW_FIXES.md  RAG_INTEGRATION_PLAN.md  RAG_USAGE_GUIDE.md  REAL_DATA_TEST_RESULTS.md  REPEAT_SET_FEATURE.md  (+21 more)
infrastructure/: CLAUDE.md
java-fit-parser/: build.sh  pom.xml
logs/: notification.json
plans/: CROSS_TRAINING_INTEGRATION_PLAN.md  FINAL_REPORT_GENERATION_TEST.md  FIT_ONLY_WORKFLOW_IMPLEMENTATION_PLAN.md  GEMINI_SDK_MIGRATION_COMPLETE.md  GEMINI_SDK_MIGRATION_OPTIMIZATION_PLAN.md  GENERATE_COMMAND_ARCHITECTURE_PLAN.md  GENERATE_COMMAND_IMPLEMENTATION_PLAN.md  LLAMA31_8B_TEST_RESULTS.md  LLM_DRIVEN_TRAINING_PLAN_ARCHITECTURE.md  MULTI_AGENT_ORCHESTRATOR_ARCHITECTURE.md  PHASE2_ARCHITECTURE.md  PHASE2_COMPLETION.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_QUICKSTART.md  PHASE2_SUMMARY.md  PHASE2_TEST_RESULTS.md  PHASE3_COMPLETION.md  PHASE3_DELIVERABLES.txt  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_INTEGRATION_TESTING_COMPLETE.md  PHASE3_README.md  PHASE3_TASK_CHECKLIST.md  PHASE4_COMPLETION.md  PHASE4_IMPLEMENTATION_COMPLETE.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE4_PROGRESS.md  WEEK_VALIDATION_IMPROVEMENTS.md  WORKOUT_COMPARISON_AGENT_PLAN.md  WORKOUT_COMPARISON_ARCHITECTURE.md  WORKOUT_COMPARISON_EXECUTIVE_SUMMARY.md  WORKOUT_DETAILED_DESCRIPTIONS_PLAN.md  WORKOUT_LIBRARY_INTEGRATION_ARCHITECTURE.md  WORKOUT_LIBRARY_REFACTOR.md
schemas/: performance_analysis_output_schema.json  report_data_schema.json  training_plan_output_schema.json
science/: Coaching Philosophy.md  Coaching_Philosophy_TOC_Ready.md  Periodization Models for Peak Cycling Performance.md
scripts/: analyze_llm_logs.py  bootstrap-terraform.sh  build-lambda.sh  build-web.sh  convert_report_to_cdn.py  convert_report_to_cdn_v2.py  convert_report_to_cdn_v3.py  create_workout_library.py  create_workout_library_from_json.py  deduplicate_merged_library.py  deduplicate_workouts.py  diagnose_gemini_loop.py  extract_workouts_from_logs.py  extract_workouts_from_reports.py  generate_compliance_report.py  get_workout_library.py  make_ids_unique.py  manual_phase_runner.py  migrate_workout_ids.py  start_api.sh  test_coach_api.py  test_extraction.py  test_gemini_function_response.py  test_integrated_report_prep.py  test_phase3_persistence.py  test_phase4_extraction.py  test_prompt_loading.py  update_report_style.py  validate_report_data.py
supabase/: config.toml
templates/: report_data.json  standalone_training_plan_viewer.html  training_plan_viewer.html
tests/: conftest.py  test_multi_agent_logging_fixes.py  test_phase3_validation.py
web/: .dockerignore  .env.example  .env.local.example  .env.production.example  .gitignore  .prettierignore  CLAUDE.md  COACH_INTEGRATION.md  CODE_REVIEW_ACTION_PLAN.md  Dockerfile  IMPLEMENTATION_STATUS.md  POST_MIGRATION_CHECKLIST.md  PR_119_CODE_REVIEW.md  SUPABASE_SETUP.md  TEST_RESULTS.md  amplify.yml  eslint.config.mjs  fix the removal of the optimistic schedu.md  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  test-calendar-navigation.md  test-fit-files.md  test-ftp-detection.md  test-strava-manual.md  test-strava-oauth.md  test-webhook.md  tsconfig.json  vitest.config.ts
(+842 files in other folders)
