[project]
name = "cycling-ai-analysis"
version = "0.1.0"
description = "Generic AI-powered cycling performance analysis with multi-provider LLM support"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Eduardo", email = "eduardo@example.com"}
]
keywords = ["cycling", "performance", "analysis", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    # FIT file parsing
    "fitdecode>=0.11.0",
    # LLM Provider SDKs
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=1.0.0",
    "ollama>=0.1.0",
    # HTTP client (used by providers)
    "httpx>=0.25.0",
    # Configuration
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    # Templating
    "jinja2>=3.1.0",
    # Utilities
    "python-dateutil>=2.8.0",
]

[project.scripts]
cycling-ai = "cycling_ai.cli.main:main"

[project.optional-dependencies]
dev = [
    # Linting and formatting
    "ruff>=0.1.0",

    # Type checking
    "mypy>=1.7.0",
    "pandas-stubs>=2.1.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",

    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

integration = [
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cycling_ai"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "fitdecode.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ollama.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.generativeai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.genai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.ai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: Integration tests requiring API keys (deselect with '-m \"not integration\"')",
]
addopts = [
    "--cov=src/cycling_ai",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
    "-m", "not integration",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
