[project]
name = "cycling-ai-analysis"
version = "0.1.0"
description = "Generic AI-powered cycling performance analysis with multi-provider LLM support"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Eduardo", email = "eduardo@example.com"}
]
keywords = ["cycling", "performance", "analysis", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    # FIT file parsing
    "fitdecode>=0.11.0",
    # LLM Provider SDKs
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=1.0.0",
    "ollama>=0.1.0",
    # AWS Bedrock support
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    # HTTP client (used by providers)
    "httpx>=0.25.0",
    # Configuration
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    # Templating
    "jinja2>=3.1.0",
    # Utilities
    "python-dateutil>=2.8.0",
    # RAG dependencies (Phase 1)
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    # FastAPI for REST API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
cycling-ai = "cycling_ai.cli.main:main"

[project.optional-dependencies]
dev = [
    # Linting and formatting
    "ruff>=0.1.0",

    # Type checking
    "mypy>=1.7.0",
    "pandas-stubs>=2.1.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",

    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

integration = [
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cycling_ai"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Long lines are acceptable for readability in f-strings and error messages

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "fitdecode.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ollama.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.generativeai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.genai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.ai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

# RAG dependencies - ignore missing type stubs
[[tool.mypy.overrides]]
module = "langchain.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_community.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: Integration tests requiring API keys (deselect with '-m \"not integration\"')",
]
addopts = [
    "--cov=src/cycling_ai",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
    "-m", "not integration",
]
# Configure anyio to use asyncio only (trio not installed)
anyio_backends = ["asyncio"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
